--- a/app/views/agencies/agency_detail_form.html.erb
+++ b/app/views/agencies/agency_detail_form.html.erb
@@ -1,10 +1,10 @@
-<div class="flex flex-1 flex-col">
+<div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
         <div class="px-4 sm:px-6 lg:px-8">
           <div class="sm:flex sm:items-center pb-6">
-            <div class="sm:flex-auto"> 
+            <div class="sm:flex-auto">
               <h1 class="text-xl font-semibold text-gray-900">
                 Finish setting up your agency to get scheduling!
               </h1>
@@ -28,57 +28,59 @@
                       </div>
                     </div>
                     <%= form.fields_for :agency_detail do |agency_detail| %>
-                    <div class="sm:col-span-3">
-                      <label for="last-name" class="block text-sm font-medium text-gray-700">Company website *</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :company_website, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. www.yourcompany.com" %>
+                      <div class="sm:col-span-3">
+                        <label for="last-name" class="block text-sm font-medium text-gray-700">Company website *</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :company_website, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. www.yourcompany.com" %>
+                        </div>
                       </div>
-                    </div>
                     <% end %>
+
                     <%= form.fields_for :physical_address do |physical_address| %>
-                    <div class="sm:col-span-3">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Street address *</label>
-                      <div class="mt-1">
-                        <%= physical_address.text_field :line1, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. 1 Main Street" %>
+                      <div class="sm:col-span-3">
+                        <label for="street-address" class="block text-sm font-medium text-gray-700">Street address *</label>
+                        <div class="mt-1">
+                          <%= physical_address.text_field :line1, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. 1 Main Street" %>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="sm:col-span-3">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Street address 2</label>
-                      <div class="mt-1">
-                        <%= physical_address.text_field :line2, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. Suite 100" %>
+                      <div class="sm:col-span-3">
+                        <label for="street-address" class="block text-sm font-medium text-gray-700">Street address 2</label>
+                        <div class="mt-1">
+                          <%= physical_address.text_field :line2, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. Suite 100" %>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="sm:col-span-2">
-                      <label for="city" class="block text-sm font-medium text-gray-700">City *</label>
-                      <div class="mt-1">
-                        <%= physical_address.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. Austin" %>
+                      <div class="sm:col-span-2">
+                        <label for="city" class="block text-sm font-medium text-gray-700">City *</label>
+                        <div class="mt-1">
+                          <%= physical_address.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. Austin" %>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="sm:col-span-2">
-                      <label for="region" class="block text-sm font-medium text-gray-700">State *</label>
-                      <div class="mt-1">
-                        <%= physical_address.select :state, options_for_select(state_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                      <div class="sm:col-span-2">
+                        <label for="region" class="block text-sm font-medium text-gray-700">State *</label>
+                        <div class="mt-1">
+                          <%= physical_address.select :state, options_for_select(state_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="sm:col-span-2">
-                      <label for="postal-code" class="block text-sm font-medium text-gray-700">ZIP / Postal code *</label>
-                      <div class="mt-1">
-                        <%= physical_address.text_field :postal_code, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. 77354" %>
+                      <div class="sm:col-span-2">
+                        <label for="postal-code" class="block text-sm font-medium text-gray-700">ZIP / Postal code *</label>
+                        <div class="mt-1">
+                          <%= physical_address.text_field :postal_code, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. 77354" %>
+                        </div>
                       </div>
-                    </div>
                     <% end %>
 
                     <%= form.fields_for :agency_detail do |agency_detail| %>
-                    <div class="sm:col-span-3">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Business hours phone *</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. 123-456-7890" %>
+                      <div class="sm:col-span-3">
+                        <label for="street-address" class="block text-sm font-medium text-gray-700">Business hours phone *</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. 123-456-7890" %>
+                        </div>
                       </div>
-                    </div>
+                    <% end %>
                     <div class="sm:col-span-3">
                       <label for="street-address" class="block text-sm font-medium text-gray-700">Time zones *</label>
                       <div data-controller="multiselect" data-multiselect-items-value='<%= time_zone_select_options %>' data-placeholder="Time zones ..." <%= raw selected_time_zones(@agency.new_record?, @selected_time_zones) %>>
@@ -87,75 +89,76 @@
                     </div>
                   </div>
                 </div>
-                <div class="pt-8">
-                  <div>
-                    <h3 class="text-lg font-medium leading-6 text-gray-900">Contact Information</h3>
-                  </div>
-                  <div class="mt-4">
-                    <h3 class="text-sm font-medium leading-6 text-gray-900">Primary Contact Information</h3>
-                  </div>
-                  <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                    <div class="sm:col-span-2">
-                      <label for="first-name" class="block text-sm font-medium text-gray-700">Name *</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :primary_contact_first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", value: @agency.owner.name %>
-                      </div>
+                <%= form.fields_for :agency_detail do |agency_detail| %>
+                  <div class="pt-8">
+                    <div>
+                      <h3 class="text-lg font-medium leading-6 text-gray-900">Contact Information</h3>
                     </div>
+                    <div class="mt-4">
+                      <h3 class="text-sm font-medium leading-6 text-gray-900">Primary Contact Information</h3>
+                    </div>
+                    <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+                      <div class="sm:col-span-2">
+                        <label for="first-name" class="block text-sm font-medium text-gray-700">Name *</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :primary_contact_first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", value: @agency.owner.name %>
+                        </div>
+                      </div>
 
-                    <div class="sm:col-span-2">
-                      <label for="last-name" class="block text-sm font-medium text-gray-700">Title *</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :primary_contact_title, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                      <div class="sm:col-span-2">
+                        <label for="last-name" class="block text-sm font-medium text-gray-700">Title *</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :primary_contact_title, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                        </div>
+                      </div>
+                      <div class="sm:col-span-2">
+                        <label for="email" class="block text-sm font-medium text-gray-700">Email address *</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :primary_contact_email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", value: @agency.owner.email %>
+                        </div>
                       </div>
                     </div>
-                    <div class="sm:col-span-2">
-                      <label for="email" class="block text-sm font-medium text-gray-700">Email address *</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :primary_contact_email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", value: @agency.owner.email %>
-                      </div>
+                    <div class="mt-6">
+                      <h3 class="text-sm font-medium leading-6 text-gray-900">Secondary Contact Information</h3>
                     </div>
-                  </div>
-                  <div class="mt-6">
-                    <h3 class="text-sm font-medium leading-6 text-gray-900">Secondary Contact Information</h3>
-                  </div>
-                  <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                    <div class="sm:col-span-2">
-                      <label for="first-name" class="block text-sm font-medium text-gray-700">Name</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :secondary_contact_first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                    <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+                      <div class="sm:col-span-2">
+                        <label for="first-name" class="block text-sm font-medium text-gray-700">Name</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :secondary_contact_first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="sm:col-span-2">
-                      <label for="last-name" class="block text-sm font-medium text-gray-700">Title</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :secondary_contact_title, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                      <div class="sm:col-span-2">
+                        <label for="last-name" class="block text-sm font-medium text-gray-700">Title</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :secondary_contact_title, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="sm:col-span-2">
-                      <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :secondary_contact_email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                      <div class="sm:col-span-2">
+                        <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :secondary_contact_email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                  <div class="pt-8">
+                    <div>
+                      <h3 class="text-lg font-medium leading-6 text-gray-900">URL Address</h3>
+                      <p class="mt-1 text-sm text-gray-500">Your URL will begin as follows: https://www.tokani.com/ and will be followed by your company name. For example: https://www.tokani.com/yourbusinessname.</p>
+                    </div>
+                    <div class="mt-6">
+                      <div class="sm:col-span-2">
+                        <label for="last-name" class="block text-sm font-medium text-gray-700">URL Name *</label>
+                        <div class="mt-1">
+                          <%= agency_detail.text_field :url, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 <% end %>
-                <div class="pt-8">
-                  <div>
-                    <h3 class="text-lg font-medium leading-6 text-gray-900">URL Address</h3>
-                    <p class="mt-1 text-sm text-gray-500">Your URL will begin as follows: https://www.tokani.com/ and will be followed by your company name. For example: https://www.tokani.com/yourbusinessname.</p>
-                  </div>
-                  <div class="mt-6">
-                    <div class="sm:col-span-2">
-                      <label for="last-name" class="block text-sm font-medium text-gray-700">URL Name *</label>
-                      <div class="mt-1">
-                        <%= agency_detail.text_field :url, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
 
               <div class="pt-5">
